Change create match route
