# tennis/urls.py
@@ -8,6 +8,6 @@ urlpatterns = [
     path('user/<int:pk>/', dv.UserDetailView.as_view(), name='user_detail'),
     path('users/', dv.UserListView.as_view(), name='user_list'),
 
-    path('match/', dv.MatchCreateView.as_view(), name='match_create'),
+    path('matches/', dv.MatchListCreateView.as_view(), name='match_create'),
     path('match/<int:pk>/', dv.MatchDetailConfirmRejectView.as_view(), name='match_detail_confirm')
 ]
